--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,9 @@
 # Enter here your API KEY from https://home.openweathermap.org/api_keys
 APIKey: ENTER_YOUR_API_KEY_HERE
 
+# How fast plugin should update weather from API? Time in seconds - min. 1s
+refreshTime: 3
+
 # Enter here city for each you want weather to be.
 cityName: "Warsaw"
 
